exports[`test EnterPasswordForm renders 1`] = `
<div
  className="layout">
  <header>
    <h1>
      Create a Password
    </h1>
    <h2 />
  </header>
  <article
    role="main">
    <span />
    <form
      action={undefined}
      id="enterpassword"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="password">
          Password
        </label>
        <p
          className="hint"
          id="password-hint">
          At least 10 characters
        </p>
        <input
          aria-describedby="password-hint"
          className=""
          id="password"
          name="password"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="password"
          value="" />
      </div>
      <input
        role="button"
        type="submit"
        value="Join the Marketplace" />
    </form>
  </article>
</div>
`;

exports[`test EnterPasswordForm renders with form_options 1`] = `
<div
  className="layout">
  <header>
    <h1>
      Create a Password
    </h1>
    <h2 />
  </header>
  <article
    role="main">
    <span />
    <form
      action="/foo/bar"
      id="enterpassword"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}>
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken" />
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="password">
          Password
        </label>
        <p
          className="hint"
          id="password-hint">
          At least 10 characters
        </p>
        <input
          aria-describedby="password-hint"
          className=""
          id="password"
          name="password"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="password"
          value="" />
      </div>
      <input
        role="button"
        type="submit"
        value="Join the Marketplace" />
    </form>
  </article>
</div>
`;

exports[`test EnterPasswordForm renders with populated fields 1`] = `
<div
  className="layout">
  <header>
    <h1>
      Create a Password
    </h1>
    <h2>
      test@company.com
    </h2>
  </header>
  <article
    role="main">
    <span />
    <form
      action={undefined}
      id="enterpassword"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="password">
          Password
        </label>
        <p
          className="hint"
          id="password-hint">
          At least 10 characters
        </p>
        <input
          aria-describedby="password-hint"
          className=""
          id="password"
          name="password"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="password"
          value="" />
      </div>
      <input
        role="button"
        type="submit"
        value="Join the Marketplace" />
    </form>
  </article>
</div>
`;
